<resources>
    <string name="app_name">TapsellPlusSDK-AndroidSample</string>
    <string name="rewarded_video">Rewarded Video</string>
    <string name="interstitial">Interstitial</string>
    <string name="show">Show</string>
    <string name="request">Request</string>
    <string name="destroy">Destroy</string>
    <string name="native_banner">Native Banner</string>
    <string name="native_banner_in_list">Native Banner In List</string>
    <string name="native_video">Native Video</string>
    <string name="standard_banner">Standard Banner</string>
    <string name="vast_video_player">Vast (PreRoll) - Video Player</string>
    <string name="vast_exo_player">Vast (PreRoll) - Exo Player</string>
    <string name="request_vast">Request VAST</string>
</resources>
